--- a/Web/main.css
+++ b/Web/main.css
@@ -1,3 +1,73 @@
 ﻿body
 {
+    overflow: hidden;
+}
+
+#params
+{
+    width: 100%;
+    height: 35px;
+    white-space: nowrap;
+}
+
+pre
+{
+    width: 99.5%;
+    height: 90%;
+    overflow: scroll;
+}
+
+.is-hidden {
+    display: none;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+    padding: 20px 30px;
+    width: 400px;
+    position: relative;
+    min-height: 150px;
+    margin: 5% auto 0;
+    background: #fff;
+}
+
+.modal-content label, .modal-content input 
+{
+    display: inline-block;
+}
+
+.inline {
+    display: inline-block;
+}
+
+.modal-content label {
+    width: 30%;
+    text-align: right;
+}
+
+.modal-content label + input {
+    width: 30%;
+    margin: 0 30% 0 4%;
+}
+
+.modal-content input + input {
+    float: right;
+}
+
+.modal-content button {
+    float: right;
+    margin-right: 5%;
+    width: 20%;
+}
+
+.modal-content #errorMessage {
+    color: red;
 }
