--- a/MsSqlDependancyBrowser/Web/main.css
+++ b/MsSqlDependancyBrowser/Web/main.css
@@ -28,7 +28,7 @@
     box-sizing: border-box;
 }
 
-div#objectNavigator label {
+#objectNavigator label {
     width: 100%;
     float: left;
     margin-top: 3px;
